#----------------------------------------
# File and Version Information:
#  $Id: ChangeLog 13159 2017-02-18 00:09:27Z dubrovin@SLAC.STANFORD.EDU $
#
# Description:
#  ChangeLog file for package graphqt
#----------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-13
2017-12-04 Mikhail S. Dubrovin
- adjust interaction between image to make it convenient
- modified:
   iv
   GUViewAxesDL.py
   GUViewGraph.py
   GUViewHist.py
   GUViewImageWithShapes.py
   IVMain.py
   QWSpectrum.py

Tag: V01-00-12
2017-10-26 Mikhail S. Dubrovin
- update keyboard examples for major methods in GUView and GUViewImage
- modified:
  GUView.py
  GUViewAxes.py
  GUViewFW.py
  GUViewImage.py

Tag: V01-00-11
2017-10-20 Mikhail S. Dubrovin
- add sphinx doc titles to all GU* modules

Tag: V01-00-10
2017-09-01 Mikhail S. Dubrovin
- IVTabDataControl - add parameter show_mode_evctl=017

Tag: V01-00-09
2017-07-28 Mikhail S. Dubrovin
- add app/timeconvertor, QWDateTimeSec.py, QWCheckList.py

Tag: V01-00-08
2017-07-05 Mikhail S. Dubrovin
- add method GUView.move_scene

Tag: V01-00-07
2017-06-09 Mikhail S. Dubrovin
- tuning for expmon project

Tag: V01-00-06
2017-05-26 Mikhail S. Dubrovin
- minor tuning for expmon project

Tag: V01-00-05
2017-05-18 Mikhail S. Dubrovin
- multiple updates for expmon project.

Tag: V01-00-04
2017-04-12 Mikhail S. Dubrovin
- add functionality of data imaging

Tag: V01-00-03
2017-04-07 Mikhail S. Dubrovin
- image input from file is completed as beta version
  modified: iv, IVFileName.py, IVMain.py

Tag: V01-00-02
2017-04-06 Mikhail S. Dubrovin
- work in progress -
  update application iv to make it usable to view images from files
  of different types e.g. *.h5 from CrystFEL pattern_sim, etc
  GUViewImage.py
  IVConfigParameters.py
  IVFileName.py
  IVImageCursorInfo.py
  IVMain.py
  IVMainButtons.py
  IVMainTabs.py
  QWLogger.py

Tag: V01-00-01