@@ -15,7 +15,7 @@ class IMAGE_VIEWER :
     def __init__(self) :
         """Image Viever (iv)"""
 
-        #log.setPrintBits(0377) 
+        log.setPrintBits(0377) 
 
         self.parser = option_parser()
         (opts, args) = self.parser.parse_args()
