@@ -11,6 +11,12 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V01-00-14
+2017-12-04 Mikhail S. Dubrovin
+- adjust interaction between image and spectrum
+	modified:   app/iv
+	modified:   src/IVMain.py
+
 Tag: V01-00-13
 2017-12-04 Mikhail S. Dubrovin
 - adjust interaction between image to make it convenient
